# Meta

./: CMakeLists.txt  README.md  abstract__attribute_8hpp.html  abstract__attribute_8hpp.js  abstract__attribute_8hpp_source.html  annotated.html  annotated_dup.js  architecture_8md.html  attribute_8hpp.html  attribute_8hpp.js  attribute_8hpp_source.html  attribute__container_8hpp.html  attribute__container_8hpp.js  attribute__container_8hpp_source.html  attribute__factory_8hpp.html  attribute__factory_8hpp.js  attribute__factory_8hpp_source.html  attribute__traits_8hpp.html  attribute__traits_8hpp.js  attribute__traits_8hpp_source.html  builtin__types_8md.html  classes.html  classmeta_1_1AbstractAttribute-members.html  classmeta_1_1AbstractAttribute.html  classmeta_1_1AbstractAttribute.js  classmeta_1_1AbstractAttribute__coll__graph.map  classmeta_1_1AbstractAttribute__coll__graph.md5  classmeta_1_1AbstractAttribute__inherit__graph.map  classmeta_1_1AbstractAttribute__inherit__graph.md5  classmeta_1_1Attribute-members.html  classmeta_1_1Attribute.html  classmeta_1_1Attribute.js  classmeta_1_1AttributeContainer-members.html  classmeta_1_1AttributeContainer.html  classmeta_1_1AttributeContainer.js  classmeta_1_1AttributeContainer__coll__graph.map  classmeta_1_1AttributeContainer__coll__graph.md5  classmeta_1_1AttributeFactory-members.html  classmeta_1_1AttributeFactory.html  classmeta_1_1AttributeFactory.js  (+246 more)
Meta/: CMakeLists.txt
Meta/include/: meta.hpp
Meta/include/meta/: abstract_attribute.hpp  attribute.hpp  attribute_container.hpp  attribute_factory.hpp  attribute_traits.hpp  attribute_traits_std.inl  logger.hpp  meta_object.hpp  type_name.hpp  type_name_stl.inl
Meta/include/meta/core/: abstract_attribute.hpp  attribute.hpp  attribute_container.hpp  container_group.hpp  data_provider.hpp  event.hpp  meta_object.hpp
Meta/include/meta/ext/color_gradient/: color_gradient.hpp  color_gradient.inl
Meta/include/meta/metadata/: keys.hpp
Meta/include/meta/presets/: compat.hpp  numeric.hpp
Meta/include/meta/serialization/: attribute_factory.hpp  snapshot_manager.hpp
Meta/include/meta/type/: attribute_traits.hpp  attribute_traits_base.inl  attribute_traits_glm.inl  attribute_traits_std.inl  type_name.hpp  type_name_glm.inl  type_name_std.inl  type_name_stl.inl
Meta/include/meta/undo_redo/: command.hpp  command_group.hpp  command_stack.hpp  set_attribute_command.hpp
Meta/src/: attribute_container.cpp  attribute_factory.cpp  container_group.cpp  logger.cpp  meta_object.cpp  smath.cpp  snapshot_manager.cpp
Meta/src/ext/color_gradient/: color_gradient.cpp
Meta/src/presets/: angle.cpp  compat.cpp  seed.cpp
Meta/src/undo_redo/: command_group.cpp  command_stack.cpp
MetaUI/common/: CMakeLists.txt
MetaUI/common/include/: meta_common.hpp
MetaUI/common/src/: common.cpp  dummy.cpp
MetaUI/ftxui/: CMakeLists.txt
MetaUI/ftxui/include/: meta_ftxui.hpp  meta_tui.hpp
MetaUI/ftxui/include/meta_ftxui/: widget_renderer.hpp  widget_renderer_stl.inl
MetaUI/ftxui/include/meta_tui/: widget_renderer.hpp
MetaUI/ftxui/tests/test_meta_tui/: main.cpp
MetaUI/ftxui/tests/test_meta_ui_ftxui/: CMakeLists.txt  main.cpp
MetaUI/qt/: CMakeLists.txt
MetaUI/qt/include/: meta_qt.hpp
MetaUI/qt/include/meta_qt/: collapsible_section.hpp  container_group_widget.hpp  container_widget.hpp  meta_widget.hpp  widget_renderer.hpp
MetaUI/qt/include/meta_qt/widget_renderer_inl/: bool.inl  color_gradient.inl  float.inl  glm_ivec2.inl  glm_vec2.inl  glm_vec3.inl  glm_vec4.inl  int.inl  std_filesystem_path.inl  std_string.inl  std_vector_float.inl  std_vector_glm_vec3.inl
MetaUI/qt/include/meta_qt/widgets/: collapsible_section.hpp  curve_canvas.hpp  gradient_picker.hpp  helpers.hpp  points_canvas.hpp  power_of_two_spin_box.hpp  preset_combo_box.hpp  range_bar.hpp  responsive_box.hpp  slider_float.hpp  slider_int.hpp  style.hpp  vector_canvas.hpp  xy_canvas.hpp
MetaUI/qt/src/: meta_widget.cpp  power_of_two_spin_box.cpp  widget_renderer.cpp
MetaUI/qt/src/container_widget/: container_group_widget.cpp  container_widget.cpp
MetaUI/qt/src/widgets/: collapsible_section.cpp  curve_canvas.cpp  gradient_picker.cpp  helpers.cpp  points_canvas.cpp  preset_combo_box.cpp  range_bar.cpp  slider_float.cpp  slider_int.cpp  style.cpp  vector_canvas.cpp  xy_canvas.cpp
MetaUI/qt/tests/test_meta_qt/: CMakeLists.txt  main.cpp
data/: builtin_types.ods
docs/: Doxyfile  architecture.md  builtin_types.md
latex/: abstract__attribute_8hpp.tex  abstract__attribute_8hpp_source.tex  annotated.tex  attribute_8hpp.tex  attribute_8hpp_source.tex  attribute__container_8hpp.tex  attribute__container_8hpp_source.tex  attribute__factory_8hpp.tex  attribute__factory_8hpp_source.tex  attribute__traits_8hpp.tex  attribute__traits_8hpp_source.tex  builtin__types_8md.tex  classmeta_1_1AbstractAttribute.tex  classmeta_1_1AbstractAttribute__coll__graph.md5  classmeta_1_1AbstractAttribute__inherit__graph.md5  classmeta_1_1Attribute.tex  classmeta_1_1AttributeContainer.tex  classmeta_1_1AttributeContainer__coll__graph.md5  classmeta_1_1AttributeFactory.tex  classmeta_1_1Attribute__coll__graph.md5  classmeta_1_1Attribute__inherit__graph.md5  classmeta_1_1ColorGradient.tex  classmeta_1_1CommandGroup.tex  classmeta_1_1CommandGroup__inherit__graph.md5  classmeta_1_1CommandStack.tex  classmeta_1_1ContainerGroup.tex  classmeta_1_1ContainerGroup__coll__graph.md5  classmeta_1_1ContainerGroup__inherit__graph.md5  classmeta_1_1Event.tex  classmeta_1_1EventConnection.tex  classmeta_1_1ICommand.tex  classmeta_1_1ICommand__inherit__graph.md5  classmeta_1_1Logger.tex  classmeta_1_1MetaObject.tex  classmeta_1_1MetaObject__inherit__graph.md5  classmeta_1_1SetAttributeCommand.tex  classmeta_1_1SetAttributeCommand__coll__graph.md5  classmeta_1_1SnapshotManager.tex  classmeta_1_1SnapshotManager__coll__graph.md5  color__gradient_8hpp.tex  (+71 more)
scripts/: format_src.sh  ods_to_md.py  update_builtin_types_doc.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+67 more)
(+16 files in other folders)
